# energo2

./: .gitmodules  CMakeLists.txt  build-release-with-tests.bat
Configurator/: CMakeLists.txt  main.cpp
Configurator/UI/: LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h
DataServer/: CMakeLists.txt  main.cpp
Plugins/TestPlugin/: CMakeLists.txt  FakeConnectionProvider.cpp  FakeConnectionProvider.h  FakeDatabaseAdapter.cpp  FakeDatabaseAdapter.h  FakeTransformationProvider.cpp  FakeTransformationProvider.h  PluginInfo.cpp
SDK/: BenchmarkTimer.cpp  BenchmarkTimer.h  CMakeLists.txt  classes.h  global.h  os.h
SDK/Data/: DataProvider.cpp  DataProvider.h
SDK/Database/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseConnectionIsClosedException.cpp  DatabaseConnectionIsClosedException.h  DatabaseConnectionProvider.cpp  DatabaseConnectionProvider.h  DatabaseConnectionSettings.cpp  DatabaseConnectionSettings.h  DatabaseQueryBuilder.cpp  DatabaseQueryBuilder.h  DatabaseResultAdapter.cpp  DatabaseResultAdapter.h  DatabaseSelectQueryBuilder.cpp  DatabaseSelectQueryBuilder.h  DatabaseUnavailableException.cpp  DatabaseUnavailableException.h  SqlComparisonBuilder.cpp  SqlComparisonBuilder.h  SqlConditionBuilder.cpp  SqlConditionBuilder.h  SqlDeleteQueryBuilder.cpp  SqlDeleteQueryBuilder.h  SqlInsertQueryBuilder.cpp  SqlInsertQueryBuilder.h  SqlQuery.cpp  SqlQuery.h  SqlQueryBadResultException.cpp  SqlQueryBadResultException.h  SqlQueryBuilder.cpp  SqlQueryBuilder.h  SqlQueryReader.cpp  SqlQueryReader.h  SqlSelectQueryBuilder.cpp  SqlSelectQueryBuilder.h  SqlUpdateQueryBuilder.cpp  SqlUpdateQueryBuilder.h  SqlValue.cpp  SqlValue.h  TransformationProvider.cpp  TransformationProvider.h
SDK/Database/Adapters/PostgreSql/: PostgreSqlConnectionAdapter.cpp  PostgreSqlConnectionAdapter.h  PostgreSqlConnectionProvider.cpp  PostgreSqlConnectionProvider.h  PostgreSqlDeleteQueryBuilder.cpp  PostgreSqlDeleteQueryBuilder.h  PostgreSqlInsertQueryBuilder.cpp  PostgreSqlInsertQueryBuilder.h  PostgreSqlQueryBuilder.cpp  PostgreSqlQueryBuilder.h  PostgreSqlResultAdapter.cpp  PostgreSqlResultAdapter.h  PostgreSqlSelectQueryBuilder.cpp  PostgreSqlSelectQueryBuilder.h  PostgreSqlTransformationProvider.cpp  PostgreSqlTransformationProvider.h  PostgreSqlUpdateQueryBuilder.cpp  PostgreSqlUpdateQueryBuilder.h
SDK/Database/Adapters/PostgreSql/Patches/: InitialPatch.cpp  InitialPatch.h
SDK/Database/Managers/: DataManager.cpp  DataManager.h  EntityManager.cpp  EntityManager.h  UserManager.cpp  UserManager.h
SDK/Database/Model/: Data.cpp  Data.h  DatabaseStoredEntity.cpp  DatabaseStoredEntity.h  EntityMetadataRegistrar.cpp  EntityMetadataRegistrar.h  IdentifiedEntity.cpp  IdentifiedEntity.h  User.cpp  User.h
SDK/Database/Patch/: Patch.cpp  Patch.h
SDK/IO/: AsyncIODevice.cpp  AsyncIODevice.h  Device.cpp  Device.h  IODevice.cpp  IODevice.h  IOException.cpp  IOException.h  IOStream.cpp  IOStream.h
SDK/Metadata/: ClassMetadata.cpp  ClassMetadata.h  EntityMetadata.cpp  EntityMetadata.h  MetaClass.cpp  MetaClass.h  MetadataProvider.cpp  MetadataProvider.h  MetadataRegistrar.cpp  MetadataRegistrar.h  SingletonClassMetadata.cpp  SingletonClassMetadata.h  TypeMetadata.cpp  TypeMetadata.h  TypeUids.h  TypeUids.txt
SDK/Network/: ConnectionPoint.cpp  ConnectionPoint.h  NetException.cpp  NetException.h  NetworkHelper.h  TcpServer.h  TcpSocket.h
SDK/Network/Linux/: NetworkHelper.cpp  TcpServer.cpp  TcpSocket.cpp
SDK/Network/Windows/: NetworkHelper.cpp  TcpSocket.cpp
SDK/Plugin/: Plugin.cpp  Plugin.h  PluginInfo.h  PluginLoader.h  PluginLoader_linux.cpp  PluginLoader_win.cpp
SDK/Threads/: ThreadPool.cpp  ThreadPool.h
SDK/Types/: DateTime.cpp  DateTime.h  DynamicSizeQueue.cpp  DynamicSizeQueue.h  ThreadSafeArray.h  ThreadSafeDynamicQueue.h  ThreadSafeQueue.h  Uuid.cpp  Uuid.h  Version.cpp  Version.h
SDK_Gui/: CMakeLists.txt
SDK_Gui/ViewModels/: Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h
SDK_Gui/Widgets/: ActionBar.cpp  ActionBar.h  ActionItem.cpp  ActionItem.h  Button.cpp  Button.h  Dialog.cpp  Dialog.h  IconButton.cpp  IconButton.h  Label.cpp  Label.h  Layout.cpp  Layout.h  StatusBar.cpp  StatusBar.h  TextActionItem.cpp  TextActionItem.h  TextBox.cpp  TextBox.h  ToolBar.cpp  ToolBar.h  VerticalLayout.cpp  VerticalLayout.h  Widget.cpp  Widget.h  Window.cpp  Window.h
SDK_Tests/: CMakeLists.txt  main.cpp
SDK_Tests/Database/: DatabaseConnectionSettings_Tests.cpp  DatabaseConnectionSettings_Tests.h  DatabaseConnection_Tests.cpp  DatabaseConnection_Tests.h  SqlComparisonBuilder_Tests.cpp  SqlComparisonBuilder_Tests.h  SqlQuery_Tests.cpp  SqlQuery_Tests.h  SqlValue_Tests.cpp  SqlValue_Tests.h  TransformationProvider_Tests.cpp  TransformationProvider_Tests.h
SDK_Tests/Database/Adapters/PostgreSql/: PostgreSqlDeleteQueryBuilder_Tests.cpp  PostgreSqlDeleteQueryBuilder_Tests.h  PostgreSqlInsertQueryBuilder_Tests.cpp  PostgreSqlInsertQueryBuilder_Tests.h  PostgreSqlSelectQueryBuilder_Tests.cpp  PostgreSqlSelectQueryBuilder_Tests.h  PostgreSqlTransformationProvider_Tests.cpp  PostgreSqlTransformationProvider_Tests.h  PostgreSqlUpdateQueryBuilder_Tests.cpp  PostgreSqlUpdateQueryBuilder_Tests.h
SDK_Tests/Threads/: ThreadPool_Tests.cpp  ThreadPool_Tests.h
SDK_Tests/Types/: DateTime_Tests.cpp  DateTime_Tests.h  DynamicSizeQueue_Tests.cpp  DynamicSizeQueue_Tests.h  ThreadSafeArray_Tests.cpp  ThreadSafeArray_Tests.h  ThreadSafeQueue_Tests.cpp  ThreadSafeQueue_Tests.h  Uuid_Tests.cpp  Uuid_Tests.h  Version_Tests.cpp  Version_Tests.h
Tools/HashGen/: CMakeLists.txt  main.cpp
Tools/UuidParser/: CMakeLists.txt  main.cpp
